; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8187se/extr_r8180_core.c_rtl8185_set_anaparam2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8187se/extr_r8180_core.c_rtl8185_set_anaparam2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@EPROM_CMD_CONFIG = common dso_local global i32 0, align 4
@CONFIG3 = common dso_local global i32 0, align 4
@CONFIG3_ANAPARAM_W_SHIFT = common dso_local global i32 0, align 4
@ANAPARAM2 = common dso_local global i32 0, align 4
@EPROM_CMD_NORMAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtl8185_set_anaparam2(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = load i32, i32* @EPROM_CMD_CONFIG, align 4
  %8 = call i32 @rtl8180_set_mode(%struct.net_device* %6, i32 %7)
  %9 = load %struct.net_device*, %struct.net_device** %3, align 8
  %10 = load i32, i32* @CONFIG3, align 4
  %11 = call i32 @read_nic_byte(%struct.net_device* %9, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.net_device*, %struct.net_device** %3, align 8
  %13 = load i32, i32* @CONFIG3, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @CONFIG3_ANAPARAM_W_SHIFT, align 4
  %16 = shl i32 1, %15
  %17 = or i32 %14, %16
  %18 = call i32 @write_nic_byte(%struct.net_device* %12, i32 %13, i32 %17)
  %19 = load %struct.net_device*, %struct.net_device** %3, align 8
  %20 = load i32, i32* @ANAPARAM2, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @write_nic_dword(%struct.net_device* %19, i32 %20, i32 %21)
  %23 = load %struct.net_device*, %struct.net_device** %3, align 8
  %24 = load i32, i32* @CONFIG3, align 4
  %25 = call i32 @read_nic_byte(%struct.net_device* %23, i32 %24)
  store i32 %25, i32* %5, align 4
  %26 = load %struct.net_device*, %struct.net_device** %3, align 8
  %27 = load i32, i32* @CONFIG3, align 4
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* @CONFIG3_ANAPARAM_W_SHIFT, align 4
  %30 = shl i32 1, %29
  %31 = xor i32 %30, -1
  %32 = and i32 %28, %31
  %33 = call i32 @write_nic_byte(%struct.net_device* %26, i32 %27, i32 %32)
  %34 = load %struct.net_device*, %struct.net_device** %3, align 8
  %35 = load i32, i32* @EPROM_CMD_NORMAL, align 4
  %36 = call i32 @rtl8180_set_mode(%struct.net_device* %34, i32 %35)
  ret void
}

declare dso_local i32 @rtl8180_set_mode(%struct.net_device*, i32) #1

declare dso_local i32 @read_nic_byte(%struct.net_device*, i32) #1

declare dso_local i32 @write_nic_byte(%struct.net_device*, i32, i32) #1

declare dso_local i32 @write_nic_dword(%struct.net_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
